--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,9 @@ li {
     min-height: 100px;
     max-height: 100%;
 }
+
+#hangman-image {
+    width:400px;
+    height: 400px;
+    border: 1px solid black;
+}
